Sandbox_Theory_Day1-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
    - host: localhost 
      http:
        paths:
          - path: /users
            pathType: Prefix 
            backend:
              service:
                name: service
                port:
                  number: 80
